Fix vertical spacing between sections. Fix intro position.

--- a/app/scss/components/_Label.scss
+++ b/app/scss/components/_Label.scss
@@ -1,16 +1,19 @@
 .border-container {
-display: flex;
-justify-content: center;
-align-items: center;
-width: 100vw;
-z-index: 9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  z-index: 9;
+  padding-top: 10vh;
+  background: #f1f1f1;
+  padding-bottom: 10vh;
 }
 
 .border {
-position: relative;
-width: 50vw;
-height: 2px;
-background: #d1a2a2;
+  position: relative;
+  width: 50vw;
+  height: 2px;
+  background: #d1a2a2;
 }
 
 .label {
@@ -27,12 +30,12 @@ background: #d1a2a2;
     z-index: 9999;
 
     padding: 10px 20px;
-border-radius: 2px;
+    border-radius: 2px;
 
 }
 
 .label-text {
-  margin-top: -29px;
+  margin-top: -160px;
   margin-left: -35px;
   padding: 5px 15px;
   text-align: center;
