--- a/app/scss/components/_Section.scss
+++ b/app/scss/components/_Section.scss
@@ -8,9 +8,6 @@ $h1-section-color: #5b4d4d;
   background-color: $section-color;
   margin: 0;
   width: 100%;
-  height: 200vh;
-  padding-top: 10vh;
-  padding-bottom: 10vh;
 
   h1 {
     text-align: center;
