--- a/app/scss/components/sections/_Opportunity.scss
+++ b/app/scss/components/sections/_Opportunity.scss
@@ -10,14 +10,11 @@ $p-font-size: 16px;
 
 #Opportunity {
 
-  height: 220vh;
-
   .container {
     width: 50vw;
   }
 
   .header {
-    height: 75vh;
     display: flex;
     justify-content: center;
     align-items: center;
