--- a/app/scss/components/sections/_Team.scss
+++ b/app/scss/components/sections/_Team.scss
@@ -16,21 +16,12 @@ $mobile-width: 1200px;
 
   .advisors-label-container {
     position: relative;
-    height: 10vh;
     width: 100vw;
-    margin-top: 45vh;
 
     @media all and(max-width: $mobile-width) {
 
     }
   }
-
-
-  @media all and(max-width: $mobile-width) {
-  height: 450vh;
-  }
-
-
 
   .team-members {
     display: flex;
@@ -45,7 +36,6 @@ $mobile-width: 1200px;
 
   .team-member {
     display: block;
-    margin: 5vw;
 
 
     @media all and(max-width: $mobile-width) {
@@ -58,8 +48,8 @@ $mobile-width: 1200px;
 
   .team-members-row {
     display: flex;
-    justify-content: center;
-    width: 100vw;
+    justify-content: space-around;
+    width: 75vw;
 
     @media all and(max-width: $mobile-width) {
     display: block;
