--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -47,7 +47,6 @@ body {
 
   .container {
       width: 100vw;
-      height: 100vh;
       left: 0;
   }
 
